tests/semantic/valid/72_i7_for_typed.hulk
for (x: Number in range(0, 2)) print(x);
