tests/semantic/invalid/64_i7_for_type_mismatch.hulk
for (x: String in range(0, 2)) print(x);
